[metadata]
name = cssselect
author = Ian Bicking
author_email = ianb@colorstudy.com
maintainer = Paul Tremberth
maintainer_email = paul.tremberth@gmail.com
license = BSD-3-Clause
description = cssselect parses CSS3 Selectors and translates them to XPath 1.0
url = https://github.com/scrapy/cssselect
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = cssselect
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
#all_files  = 1

[upload_sphinx] # Sphinx-PyPI-upload
upload-dir = docs/_build/html

[tool:pytest]
testpaths = tests

[bdist_wheel]
universal = 1
